--- a/src/components/Header1/style.css
+++ b/src/components/Header1/style.css
@@ -1,13 +1,14 @@
 .header .link{
     text-decoration: none;
-
+    color: rgb(8, 0, 0);
+    font-weight: bold;
 }
 .header{
         max-width: 2320px;
         height: 50px;
         width: 100%;
         position: fixed;
-        background-color : #a1a7a2;;
+        background-color : #b2b4b3;;
         color : #fff;
         display: flex;
         justify-content: space-between;
